[package]
name = "ertmp-sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4.4.11", features = ["derive"] }
flavors = { version = "0.2", path = "../flavors"}
futures = { version = "0.3" }
log = "0.4.17"
nom = "7.1.3"
rml_amf0 = "0.3.0"
rml_rtmp = "0.8.0"
simplelog = "0.12.0"
tokio = { version = "1.9", features = ["full"]}
url = "2.5.0"
