[package]
name = "ertmp-sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4.4.11", features = ["derive"] }
flavors = { version = "0.2", git = "https://github.com/kc5nra/flavors" }
futures = { version = "0.3" }
log = "0.4.17"
nom = "7.1.3"
rml_rtmp = { version = "0.8.0" }
simplelog = "0.12.0"
tokio = { version = "1.9", features = ["full"]}
url = "2.5.0"

pki-types = { package = "rustls-pki-types", version = "1", optional = true }
tokio-rustls = { version = "0.25.0", optional = true }
webpki-roots = { version = "0.26", optional = true }

[features]
default = [ "rtmps" ]
rtmps = [ "dep:pki-types", "dep:tokio-rustls", "dep:webpki-roots" ]